force-app/main/default/objects/Account_Sub_Segment__c/Account_Sub_Segment__c.object-meta.xml
<CustomObject>
    <label>Account Sub-Segment</label>
    <nameField>
        <label>Account Sub Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Sub-Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>