force-app/main/default/objects/Account_Sub_Segment__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <label>Account Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>