force-app/main/default/objects/Account_Sub_Segment__c/fields/Destruction_Target_Apr__c.field-meta.xml
<CustomField>
    <fullName>Destruction_Target_Apr__c</fullName>
    <label>Destruction Target Apr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>