force-app/main/default/objects/Account_Sub_Segment__c/fields/PW_Target_Feb__c.field-meta.xml
<CustomField>
    <fullName>PW_Target_Feb__c</fullName>
    <label>PW Target Feb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>