force-app/main/default/objects/Account_Sub_Segment__c/fields/YTD_End_Period__c.field-meta.xml
<CustomField>
    <fullName>YTD_End_Period__c</fullName>
    <formula>VALUE($Label.Current_End_Cube_Period)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD End Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>