force-app/main/default/objects/Account_Sub_Segment__c/fields/YTD_Target_Inbound__c.field-meta.xml
<CustomField>
    <fullName>YTD_Target_Inbound__c</fullName>
    <formula>Case(YTD_End_Period__c, 
1, Inbound_Target_Jan__c, 
2, Inbound_Target_Jan__c + Inbound_Target_Feb__c, 
3, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c, 
4, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c, 
5, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c + Inbound_Target_May__c, 
6, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c + Inbound_Target_May__c + Inbound_Target_June__c, 
7, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c + Inbound_Target_May__c + Inbound_Target_June__c + Inbound_Target_July__c, 
8, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c + Inbound_Target_May__c + Inbound_Target_June__c + Inbound_Target_July__c + Inbound_Target_Aug__c, 
9, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c + Inbound_Target_May__c + Inbound_Target_June__c + Inbound_Target_July__c + Inbound_Target_Aug__c + Inbound_Target_Sept__c, 
10, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c + Inbound_Target_May__c + Inbound_Target_June__c + Inbound_Target_July__c + Inbound_Target_Aug__c + Inbound_Target_Sept__c + Inbound_Target_Oct__c, 
11, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c + Inbound_Target_May__c + Inbound_Target_June__c + Inbound_Target_July__c + Inbound_Target_Aug__c + Inbound_Target_Sept__c + Inbound_Target_Oct__c + Inbound_Target_Nov__c, 
12, Inbound_Target_Jan__c + Inbound_Target_Feb__c + Inbound_Target_Mar__c + Inbound_Target_Apr__c + Inbound_Target_May__c + Inbound_Target_June__c + Inbound_Target_July__c + Inbound_Target_Aug__c + Inbound_Target_Sept__c + Inbound_Target_Oct__c + Inbound_Target_Nov__c + Inbound_Target_Dec__c, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Target Inbound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>