force-app/main/default/objects/Account_Sub_Segment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Segment__c</columns>
    <columns>YTD_Target_Inbound__c</columns>
    <columns>YTD_Target_PW__c</columns>
    <columns>YTD_Target_Destruction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>